# ifdat-docs

./: .gitignore  .readthedocs.yml  setup.cfg
docs/: Makefile  copy.py  copy_docx.py  errors.txt
docs/_files/: IFDAT_DATAMODEL.xlsx  IFDAT_SCHEMA.json  IFDAT_TEMPLATE.xlsx  IFDat-Docs.docx
docs/_files/examples/: MFMC_T0.json  MFMC_T0.xlsx  MFMC_T1.json  MFMC_T1.xlsx  MFMC_T1_CORR.json  MFMC_T1_CORR.xlsx
docs/source/: categories.rst  codelists.rst  conf.py  corner_cases.rst  dev.rst  download.rst  examples.rst  generic.rst  glossary.rst  identifiers.rst  index.rst  license.rst  model.rst  ras.rst  regulation.rst  sid.rst  submission.rst  tables.rst  types.rst  validation.rst  validation_en.rst_  whatsnew.rst
docs/source/_files/: IFDAT_DATAMODEL.xlsx  IFDAT_QUESTIONNAIRE.xlsx  IFDAT_SCHEMA.json  IFDAT_TEMPLATE.xlsx  ifdat-docs.docx
docs/source/_static/: IFDat-Docs.docx
docs/source/ack/: accounting.rst  critical.rst
docs/source/categories/: acc.rst  bsi.rst  event.rst  inc.rst  income.rst  other.rst  other_info.rst  other_key.rst  ref.rst  self.rst  self_info.rst  self_key.rst
docs/source/codelists/: bsi_rmng_fxd.rst  cre_typ.rst  dbt_cpn_frqncy.rst  dbt_cpn_typ.rst  dbt_cvrd_typ.rst  dbt_grnt_lvl.rst  dbt_prmry_clss.rst  dbt_rnk_lvl.rst  dbt_scrty_lvl.rst  dbt_scrtzn_typ.rst  dbt_stts.rst  dep_ntc.rst  dep_typ.rst  dprtmnt.rst  drvtv_typ.rst  dvdnd_cstm_frqncy.rst  dvdnd_typ.rst  fnd_bnd_fcs.rst  fnd_dstrbtn_typ.rst  fnd_ggrphcl_fcs.rst  fnd_grn_typ.rst  fnd_invstmnt_plcy.rst  fnd_invstr_typ.rst  fnd_rl_estt_typ.rst  fnd_sbtyp.rst  fnd_strtgy.rst  fnd_typ.rst  (+15 more)
(+558 files in other folders)
