[metadata]
name = ifdat-docs
author = IFDat-docs developers
author_email = aloumiotis@bankofgreece.gr
maintainer = Antonis Loumiotis
maintainer_email = aloumiotis@bankofgreece.gr
description = Investment Fund Statistics Reporting Scheme
keywords = statistics, SDMX, pandas, data, economics, science
project_urls =
    Documentation = https://ifdat-docs.readthedocs.io/en/latest
url = https://github.com/lerooze/ifdat-docs
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Information Analysis

[options]
python_requires = >= 3.7.2

[options.extras_require]
docs =
    sphinx
    sphinx-book-theme
    IPython
    docxsphinx
